--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,7 +10,7 @@
     "plugin:prettier/recommended",
     "prettier",
     "plugin:import/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -23,6 +23,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "semi": ["error", "always"]
   }
  }
