--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,5 +1,7 @@
 {
   "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "semi": true,
+  "endOfLine": "auto"
  }
