--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.4.3",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
