feat: adicionado requisição para criação de documento, adicionado paginação e loading

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
     "zod": "^3.22.4"
